--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.4",
+    "react-signature-canvas": "^1.0.7",
     "reactflow": "^11.11.4",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
