--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/multer": "^1.4.12",
     "@types/pdfkit": "^0.13.8",
+    "@types/react-signature-canvas": "^1.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
