--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/multer": "^1.4.12",
     "@types/pdfkit": "^0.13.8",
     "@types/react-signature-canvas": "^1.0.6",
+    "blob-stream": "^0.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
